--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 body {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    min-height: 100vh; 
+    align-items: center; 
     justify-content: center; 
-    margin: 0;
+    margin-top: 100px;
     background-color: rgb(122, 122, 122);
 }
 #result {
@@ -33,7 +32,9 @@ body {
   -webkit-mask-size: 100%;
   cursor: pointer;
   background-color: transparent;
-  transform: translateY(8px)
+  transform: translateY(8px);
+  width: 500px;
+  height: 300px;
  }
  
  button:after {
@@ -87,4 +88,7 @@ body {
 #Gotham {
   font-size: 50px;
   color: #b3b1b0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
